remove legacy collection sources
